--- a/dos33.html
+++ b/dos33.html
@@ -2834,13 +2834,14 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     034             DCI "VERIFY"
                     035             DFB 0                                           ; end sentinel, see <span class='todo'>TODO</span>
                     036             PAGE
-                    037 ;                                                                   ; Crappy names, bitmask flags should be prefixed with a common name:
-                    038 ; COMMAND SYNTAX OP EQUATES FOR SYNTAX BYTE ONE                     ;     <span class='code'>P1_</span>     (better)
-                    039 ;                                                                   ;     <span class='code'>PARAM1_</span>
+                    037 ;                                                                   ; *sigh* Typical crap names; bitmask flags should be prefixed with a common name:
+                    038 ; COMMAND SYNTAX OP EQUATES FOR SYNTAX BYTE ONE                     ;     <span class='code'>P1_</span>     (better, but will concede a short name is extremely convenient)
+                    039 ;                                                                   ;     <span class='code'>PARAM1_</span> (best)
                                                                                             ; Q. Why we would encode the type of paramater such as 1st or 2nd in the name?
                                                                                             ; A. It helps catch typo's
                                                                                             ;        LDA PARAM2
-                                                                                            ;        CMP PARAM1_CREATE  ; <-- visual indicator: param 2 doesn&lsquo;t match param 1 above
+                                                                                            ;        CMP PARAM1_CREATE  ; &larr; visual indicator: param 2 doesn&lsquo;t match param 1 above
+                                                                                            ;
                     040 <a class='e' name='NPB'    >NPB         </a>EQU $<span class='n'>80</span>         ; NO PARMS OK, COMMAND GOES TO BASIC    ; P1_BAS    The <a class='dumb' name='amateur1'>first sign</a> of an amateur programmer:
                     041 <a class='e' name='NPE'    >NPE         </a>EQU $<span class='n'>40</span>         ; NO PARMS OK, COMMAND TO EXECUTION RTN ; P1_EXC        <b>Poor variable names</b>
                     042 <a class='e' name='FN1'    >FN1         </a>EQU $<span class='n'>20</span>         ; FILE NAME1 REGD                       ; P1_SRC    Having 2 variable names differ by only <b>1 character</b>, such as NPE, NPB, or worse NUM1, NUM2
