Add unique names

--- a/dos33.html
+++ b/dos33.html
@@ -2849,6 +2849,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                             ;
                                                                                             ;           is a recipe for disaster.
                                                                                             ;           "Silient" errors (uncaught typos) are a debugging nightmare.
+                                                                                            ;           Using <b>unique names</b> lets us minimize this error.
+                                                                                            ;
                     042 <a class='e' name='FN1'    >FN1         </a>EQU $<span class='n'>20</span>         ; FILE NAME1 REGD                       ; P1_SRC
                     043 <a class='e' name='FN2'    >FN2         </a>EQU $<span class='n'>10</span>         ; FILE NAME2 REQD                       : P1_DST
                     044 <a class='e' name='NUM1'   >NUM1        </a>EQU $<span class='n'>08</span>         ; NUMERIC 0-7 REGD                      ; P1_SLT -- WTF is the _range_ of NUM 1 ??? <b>Slot</b> tells us
